feat: modify openapi spec, move controller location, use generated python module
